# small-win

./: .gitignore  pyproject.toml
src/small_win/: main.py
src/small_win.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/small_win/api/: chat.py
src/small_win/core/: goal_breakdown.py
src/small_win/schemas/: schema.py
static/: index.html
