[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "small-win"
version = "0.1.0"
description = "Small Win - your AI todo list"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
